修改文字了

--- a/leftbar.html
+++ b/leftbar.html
@@ -71,8 +71,8 @@ a{text-decoration:none;}
     <div class="line"></div>
     <dl class="channel">
       <dt>记录查询<img src="images/left/select_xl01.png" alt="3" /></dt>
-      <dd class="first_dd"><a href="doorrecord.html" target="mainFrame">门禁记录</a></dd>
-      <dd><a href="syslog.html" target="mainFrame">系统日志</a></dd>
+      <dd class="first_dd"><a href="doorrecord.html" target="mainFrame">1</a></dd>
+      <dd><a href="syslog.html" target="mainFrame">2</a></dd>
     </dl>
     <div class="line"></div>
     <dl class="app">
