--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@ body {
 <DIV id="base">
   <DIV id="u61">
     <DIV id="u62">
-      <p align="center"><font size="+2">欢迎使用门禁主控WEB管理系统!</font></p>
+      <p align="center"><font size="+2">最新动态！</font></p>
     </DIV>
   </DIV>
 </DIV>
