修改了html链接

--- a/leftbar.html
+++ b/leftbar.html
@@ -49,52 +49,48 @@ a{text-decoration:none;}
     <div class="line"></div>
     <dl class="system_log">
       <dt onclick="changeImage()">我的博客<img src="images/left/select_xl01.png" alt="5" /></dt>
-      <dd class="first_dd"><a href="devicestatus.html" target="mainFrame">软件开发</a></dd>
-      <dd><a href="sysstatus.html" target="mainFrame">软件工程</a></dd>
-      <dd><a href="timeset.html" target="mainFrame">实践感想</a></dd>
+      <dd class="first_dd"><a href="error.html" target="mainFrame">软件开发</a></dd>
+      <dd><a href="error.html" target="mainFrame">软件工程</a></dd>
+      <dd><a href="error.html" target="mainFrame">实践感想</a></dd>
     </dl>
     <div class="line"></div>
     <dl class="system_log">
       <dt onclick="changeImage()">我的项目<img src="images/left/select_xl01.png" alt="5" /></dt>
-      <dd><a href="opendoor.html" target="mainFrame">AI</a></dd>
-      <dd><a href="reboot_dc.html" target="mainFrame">PC端</a></dd>
-      <dd><a href="dcnetset.html" target="mainFrame">WEB端</a></dd>
-      <dd><a href="delDoorData.html" target="mainFrame">Linux</a></dd>
-      <dd><a href="gateidset.html" target="mainFrame">APP</a></dd>
-      <dd><a href="resetarg.html" target="mainFrame">其他</a></dd>
+      <dd><a href="error.html" target="mainFrame">AI</a></dd>
+      <dd><a href="error.html" target="mainFrame">PC端</a></dd>
+      <dd><a href="error.html" target="mainFrame">WEB端</a></dd>
+      <dd><a href="error.html" target="mainFrame">Linux</a></dd>
+      <dd><a href="error.html" target="mainFrame">APP</a></dd>
+      <dd><a href="error.html" target="mainFrame">其他</a></dd>
     </dl>
     <div class="line"></div>
     <dl class="custom">
       <dt onclick="changeImage()">我的状态<img src="images/left/select_xl01.png" alt="4" /></dt>
-      <dd class="first_dd"><a href="rightsset.html" target="mainFrame">我的工作</a></dd>
+      <dd class="first_dd"><a href="error.html" target="mainFrame">我的工作</a></dd>
     </dl>
     <div class="line"></div>
     <dl class="channel">
       <dt>记录查询<img src="images/left/select_xl01.png" alt="3" /></dt>
-      <dd class="first_dd"><a href="doorrecord.html" target="mainFrame">1</a></dd>
-      <dd><a href="syslog.html" target="mainFrame">2</a></dd>
+      <dd class="first_dd"><a href="error.html" target="mainFrame">1</a></dd>
+      <dd><a href="error.html" target="mainFrame">2</a></dd>
     </dl>
     <div class="line"></div>
     <dl class="app">
       <dt onclick="changeImage()">给我留言<img src="images/left/select_xl01.png" alt="2" /></dt>
-      <dd class="first_dd"><a href="refreshtest.html" target="mainFrame">1</a></dd>
-      <dd><a href="camera.html" target="mainFrame">2</a></dd>
-      <dd><a href="showvideo.html" target="mainFrame">3</a></dd>
-      <dd><a href="camera_front.html" target="mainFrame">4</a></dd>
-      <dd><a href="showvideo_front.html" target="mainFrame">5</a></dd>
+      <dd class="first_dd"><a href="error.html" target="mainFrame">1</a></dd>
+      <dd><a href="error.html" target="mainFrame">2</a></dd>
+      <dd><a href="error.html" target="mainFrame">3</a></dd>
+      <dd><a href="error.html" target="mainFrame">4</a></dd>
+      <dd><a href="error.html" target="mainFrame">5</a></dd>
     </dl>
     <div class="line"></div>
     <dl class="syetem_management">
       <dt>其他杂项<img src="images/left/select_xl01.png" alt="1" /></dt>
-      <dd class="first_dd"><a href="rebootsys.html" target="mainFrame">1</a></dd>
-      <dd><a href="argset.html" target="mainFrame">2</a></dd>
-      <dd><a href="changepass.html" target="mainFrame">3</a></dd>
-      <dd><a href="logset.html" target="mainFrame">4</a></dd>
-      <dd><a href="netset.html" target="mainFrame">5</a></dd>
-      <dd><a href="cleandata.html" target="mainFrame">6</a></dd>
-      <dd><a href="uploadfile.html" target="mainFrame">7</a></dd>
-      <dd><a href="uploadType.html" target="mainFrame">8</a></dd>
-      <dd><a href="snap_event.html" target="mainFrame">9</a></dd>
+      <dd class="first_dd"><a href="error.html" target="mainFrame">1</a></dd>
+      <dd><a href="error.html" target="mainFrame">2</a></dd>
+      <dd><a href="error.html" target="mainFrame">3</a></dd>
+      <dd><a href="error.html" target="mainFrame">4</a></dd>
+      <dd><a href="error.html" target="mainFrame">5</a></dd>
     </dl>
   </div>
 </div>
