--- a/topbar.html
+++ b/topbar.html
@@ -5,6 +5,6 @@
 <title>title</title>
 </head>
 <body bgcolor="#3992D0">
-<p align="right"><font color="#CCCCCC">欢迎大家访问我的主页</font></p>
+<p align="left">jhkdiy个人主页</p><p align="right"><font color="#CCCCCC">欢迎大家访问我的主页</font></p>
 </body>
 </html>
